Finalized layout for create, edit, and view event

--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -1,14 +1,292 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CreateEventFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
+        <EditText
+            android:id="@+id/createEventName"
+            android:layout_width="280dp"
+            android:layout_height="52dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginEnd="40dp"
+            android:backgroundTint="?attr/colorPrimary"
+            android:ems="10"
+            android:fontFamily="@font/inter_bold"
+            android:hint="Event Name"
+            android:inputType="text"
+            android:textSize="22sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/createEventColor"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="40dp"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_square_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_event_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
+            android:text="Start"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createEventColor" />
+
+        <TextView
+            android:id="@+id/createEventStartDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="54dp"
+            android:layout_marginTop="20dp"
+            android:text="Wed, Feb 14"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@+id/tv_event_start"
+            app:layout_constraintTop_toBottomOf="@+id/createEventColor" />
+
+        <TextView
+            android:id="@+id/createEventEndDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="63dp"
+            android:layout_marginTop="15dp"
+            android:text="Wed, Feb 14"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@+id/tv_event_end"
+            app:layout_constraintTop_toBottomOf="@+id/createEventStartDate" />
+
+        <TextView
+            android:id="@+id/createEventStartTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:text="8:00 AM"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@+id/createEventStartDate"
+            app:layout_constraintTop_toBottomOf="@+id/createEventColor" />
+
+        <TextView
+            android:id="@+id/createEventEndTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="16dp"
+            android:text="9:30 AM"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@+id/createEventEndDate"
+            app:layout_constraintTop_toBottomOf="@+id/createEventStartTime" />
+
+        <TextView
+            android:id="@+id/tv_created_by"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="27dp"
+            android:text="Event Host / Important Person"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createEventEndDate" />
+
+        <ImageView
+            android:id="@+id/createEventUser"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_created_by"
+            tools:src="@tools:sample/avatars" />
+
+        <EditText
+            android:id="@+id/createEventUsername"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="?attr/colorPrimary"
+            android:ems="10"
+            android:hint="Event Host"
+            android:inputType="text"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@+id/createEventUser"
+            app:layout_constraintTop_toBottomOf="@+id/tv_created_by" />
+
+        <TextView
+            android:id="@+id/tv_event_desc_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="27dp"
+            android:text="Event Description"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createEventUser" />
+
+        <EditText
+            android:id="@+id/createEventDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:backgroundTint="?attr/colorPrimary"
+            android:ems="10"
+            android:gravity="start|top"
+            android:hint="This user hasn’t placed a description for this event yet. "
+            android:inputType="textMultiLine"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_event_desc_header" />
+
+        <TextView
+            android:id="@+id/tv_event_loc_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="15dp"
+            android:text="Event Location"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createEventDesc" />
+
+        <EditText
+            android:id="@+id/createEventLoc"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:backgroundTint="?attr/colorPrimary"
+            android:ems="10"
+            android:hint="Location"
+            android:inputType="text"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_event_loc_header" />
+
+        <TextView
+            android:id="@+id/tv_event_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="15dp"
+            android:text="End"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_event_start" />
+
+        <TextView
+            android:id="@+id/tv_event_cat_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
+            android:text="Category"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createEventLoc" />
+
+        <Button
+            android:id="@+id/createEventCat"
+            android:layout_width="110dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="15dp"
+            android:backgroundTint="?attr/android:colorBackground"
+            android:clickable="true"
+            android:fontFamily="@font/inter_medium"
+            android:minWidth="0dp"
+            android:stateListAnimator="@null"
+            android:text="School"
+            android:textAllCaps="false"
+            android:textColor="?attr/colorOnBackground"
+            android:textSize="12sp"
+            app:cornerRadius="20dp"
+            app:layout_constraintStart_toEndOf="@+id/tv_event_cat_header"
+            app:layout_constraintTop_toBottomOf="@+id/createEventLoc"
+            app:strokeColor="?attr/colorOnBackground"
+            app:strokeWidth="2dp" />
+
+        <Button
+            android:id="@+id/createEventRepeat"
+            android:layout_width="110dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="68dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="?attr/android:colorBackground"
+            android:clickable="true"
+            android:fontFamily="@font/inter_medium"
+            android:minWidth="0dp"
+            android:stateListAnimator="@null"
+            android:text="None"
+            android:textAllCaps="false"
+            android:textColor="?attr/colorOnBackground"
+            android:textSize="12sp"
+            app:cornerRadius="20dp"
+            app:layout_constraintStart_toEndOf="@+id/tv_repeat_header"
+            app:layout_constraintTop_toBottomOf="@+id/createEventCat"
+            app:strokeColor="?attr/colorOnBackground"
+            app:strokeWidth="2dp" />
+
+        <TextView
+            android:id="@+id/tv_repeat_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="25dp"
+            android:text="Repeat"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_event_cat_header" />
+
+        <Button
+            android:id="@+id/createEventCancel"
+            android:layout_width="110dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="75dp"
+            android:layout_marginBottom="40dp"
+            android:backgroundTint="@color/light_outline"
+            android:stateListAnimator="@null"
+            android:text="CANCEL"
+            app:cornerRadius="7dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/createEventSave"
+            android:layout_width="110dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="75dp"
+            android:layout_marginBottom="40dp"
+            android:backgroundTint="@color/light_accent"
+            android:stateListAnimator="@null"
+            android:text="SAVE"
+            app:cornerRadius="7dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
